--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-worker_processes 1;
+daemon off;
 
 events { worker_connections 1024; }
 
@@ -6,21 +6,30 @@ http {
     default_type  application/octet-stream;
     include       /etc/nginx/mime.types;
 
+    log_format json_custom escape=json
+    '{'
+	      '"http.version":"$request",'
+	      '"http.status_code":$status,'
+	      '"http.method":"$request_method",'
+	      '"http.referer":"$http_referer",'
+	      '"http.useragent":"$http_user_agent",'
+	      '"time_local":"$time_local",'
+	      '"remote_addr":"$remote_addr",'
+	      '"remote_user":"$remote_user",'
+	      '"body_bytes_sent":"$body_bytes_sent",'
+	      '"request_time":$request_time,'
+	      '"response_content_type":"$sent_http_content_type",'
+	      '"X-Forwarded-For":"$proxy_add_x_forwarded_for",'
+	      '"custom_key":"custom_value"'
+    '}';
+
+    access_log /var/log/nginx/access.log json_custom;
+
     sendfile on;
     server_tokens off;
     server {
-        root /usr/share/nginx/html/;
+        root /usr/share/nginx/html;
         server_name localhost;
-        
-
-        if ($http_user_agent ~* LWP::Simple|BBBike|wget) {
-          return 403;
-        }
-
-        add_header Allow "GET,HEAD,OPTIONS" always;
-        if ( $request_method !~ ^(GET|HEAD|OPTIONS)$ ) {
-          return 405;
-        }
 
         location / {
           add_header 'Access-Control-Allow_Credentials' 'true';
@@ -48,5 +57,13 @@ http {
           add_header Content-Type text/plain;
           return 200 "Healthy\n";
         }
+
+	location /nginx_status {
+	    # Choose your status module
+
+	    # freely available with open source NGINX
+	    stub_status;
+
+  	}
     }
 }
