Added Listening on 8080

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,6 +30,7 @@ http {
     server {
         root /usr/share/nginx/html;
         server_name localhost;
+	listen 8080;
 
         location / {
           add_header 'Access-Control-Allow_Credentials' 'true';
