--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,18 @@
+ 
+load_module modules/ngx_http_opentracing_module.so;
+
 daemon off;
 
 events { worker_connections 1024; }
 
 http {
+    
+    opentracing on;
+    opentracing_tag http_user_agent $http_user_agent;
+    opentracing_trace_locations off;
+
+    opentracing_load_tracer /usr/local/lib/libdd_opentracing_plugin.so /etc/dd-config.json;
+
     default_type  application/octet-stream;
     include       /etc/nginx/mime.types;
 
