Permission issues fix

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http {
     opentracing_tag http_user_agent $http_user_agent;
     opentracing_trace_locations off;
 
-    opentracing_load_tracer /usr/local/lib/libdd_opentracing_plugin.so /etc/dd-config.json;
+    opentracing_load_tracer /usr/local/lib/libdd_opentracing_plugin.so /config/dd-config.json;
 
     default_type  application/octet-stream;
     include       /etc/nginx/mime.types;
