Forgot tracing locations

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,9 @@ http {
     opentracing_trace_locations off;
 
     opentracing_load_tracer /usr/local/lib/libdd_opentracing_plugin.so /config/dd-config.json;
-
+    upstream backend {
+       server app-service:9001;
+    }
     default_type  application/octet-stream;
     include       /etc/nginx/mime.types;
 
@@ -43,7 +45,12 @@ http {
 	listen 8080;
 
         location / {
-          add_header 'Access-Control-Allow_Credentials' 'true';
+          
+          opentracing_operation_name "$request_method $uri";
+          opentracing_tag "resource.name" "/";
+          opentracing_propagate_context;
+
+	  add_header 'Access-Control-Allow_Credentials' 'true';
           add_header 'Access-Control-Allow-Methods' 'GET,HEAD,OPTIONS';
 
           if ($request_method = 'OPTIONS') {
@@ -65,7 +72,11 @@ http {
         }
 
         location /health {
-          add_header Content-Type text/plain;
+          opentracing_operation_name "$request_method $uri";
+          opentracing_tag "resource.name" "/";
+          opentracing_propagate_context;
+          
+	  add_header Content-Type text/plain;
           return 200 "Healthy\n";
         }
 
