Fixing resource.name

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,7 +30,8 @@ http {
 	      '"request_time":$request_time,'
 	      '"response_content_type":"$sent_http_content_type",'
 	      '"X-Forwarded-For":"$proxy_add_x_forwarded_for",'
-	      '"custom_key":"custom_value"'
+	      '"env":"build"',
+	      '"service":"pedigree-nginx"',
     '}';
 
     access_log /var/log/nginx/access.log json_custom;
@@ -71,7 +72,7 @@ http {
 
         location /health {
           opentracing_operation_name "$request_method $uri";
-          opentracing_tag "resource.name" "/";
+          opentracing_tag "resource.name" "/health";
           opentracing_propagate_context;
           
 	  add_header Content-Type text/plain;
@@ -80,7 +81,9 @@ http {
 
 	location /nginx_status {
 	    # Choose your status module
-
+	    opentracing_operation_name "$request_method $uri";
+            opentracing_tag "resource.name" "/nginx_status";
+            opentracing_propagate_context;
 	    # freely available with open source NGINX
 	    stub_status;
 
