--- a/nginx.conf
+++ b/nginx.conf
@@ -30,8 +30,8 @@ http {
 	      '"request_time":$request_time,'
 	      '"response_content_type":"$sent_http_content_type",'
 	      '"X-Forwarded-For":"$proxy_add_x_forwarded_for",'
-	      '"env":"build"',
-	      '"service":"pedigree-nginx"',
+	      '"env":"build",'
+	      '"service":"pedigree-nginx"'
     '}';
 
     access_log /var/log/nginx/access.log json_custom;
