Testing nginx user security

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,9 @@ http {
     opentracing_tag http_user_agent $http_user_agent;
     opentracing_trace_locations off;
 
-    opentracing_load_tracer /usr/local/lib/libdd_opentracing_plugin.so /config/dd-config.json;
- 
+    #opentracing_load_tracer /usr/local/lib/libdd_opentracing_plugin.so /config/dd-config.json;
+    opentracing_load_tracer /usr/local/lib64/libdd_opentracing.so /config/dd-config.json;
+
     default_type  application/octet-stream;
     include       /etc/nginx/mime.types;
 
@@ -41,7 +42,7 @@ http {
     server {
         root /usr/share/nginx/html;
         server_name localhost;
-	listen 8080;
+	      listen 8080;
 
         location / {
           
@@ -49,7 +50,7 @@ http {
           opentracing_tag "resource.name" "/";
           opentracing_propagate_context;
 
-	  add_header 'Access-Control-Allow_Credentials' 'true';
+	        add_header 'Access-Control-Allow_Credentials' 'true';
           add_header 'Access-Control-Allow-Methods' 'GET,HEAD,OPTIONS';
 
           if ($request_method = 'OPTIONS') {
@@ -75,18 +76,18 @@ http {
           opentracing_tag "resource.name" "/health";
           opentracing_propagate_context;
           
-	  add_header Content-Type text/plain;
+	        add_header Content-Type text/plain;
           return 200 "Healthy\n";
         }
 
-	location /nginx_status {
-	    # Choose your status module
-	    opentracing_operation_name "$request_method $uri";
+        location /nginx_status {
+            # Choose your status module
+            opentracing_operation_name "$request_method $uri";
             opentracing_tag "resource.name" "/nginx_status";
             opentracing_propagate_context;
-	    # freely available with open source NGINX
-	    stub_status;
+            # freely available with open source NGINX
+            stub_status;
 
-  	}
+          }
     }
 }
