--- a/dd-config.json
+++ b/dd-config.json
@@ -1,5 +1,5 @@
 {
-  "service": "nginx",
+  "service": "pedigree-nginx",
   "operation_name_override": "nginx.handle",
   "agent_host": "${DD_AGENT_HOST}",
   "agent_port": 8126
