Testing Opentracing env variables

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,8 +5,10 @@ daemon off;
 
 events { worker_connections 1024; }
 
+
+include /config/env.txt;
+
 http {
-    
     opentracing on;
     opentracing_tag http_user_agent $http_user_agent;
     opentracing_trace_locations off;
@@ -69,6 +71,7 @@ http {
           add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, max-age=0';
           add_header 'Pragma' 'no-cache';
           add_header Last-Modified $date_gmt;
+	  add_header 'Server' 'sith';
         }
 
         location /health {
